# polymarket-edge

./: .gitignore  CROSSVENUE.md  EXECUTION.md  GINA_ENGAGEMENT.md  MICROSTRUCTURE.md  README.md  RECIPES.md  REDTEAM.md  REPORT.md  TRADE_LOG.md  WORLD_CUP_MM.md  YEAR_ANALYSIS.md  dashboard.html  dashboard_hyperliquid.html  dashboard_polymarket.html  polymarket_edge.db  polymarket_edge.db-shm  polymarket_edge.db-wal  pyproject.toml  schema.sql
.github/workflows/: ci.yml  daily-data.yml
docs/: plan_A_world_cup_mm.md  plan_B_basis_hedge_regime.md  plan_D_funding_extremes.md
scripts/: cross_venue_case.py  hl_basis_regime.py  hl_extremes_study.py  microstructure_scan.py  pull_year_of_hl_data.py  refresh_artefacts.sh  scan_loop.sh  sensitivity.py  sign_simulation_trade.py  size_basket_trade.py  spread_sensitivity.py  trap_classifier_train.py  volume_weighted_trap_rate.py  walk_forward.py  world_cup_mm_sim.py  year_analysis.py
src/polymarket_edge/: __init__.py  analysis.py  book_depth.py  cli.py  cross_venue.py  dashboard.py  db.py  detector.py  fetch.py  historical.py  hl_backtest.py  hl_basis_hedge.py  hl_extremes.py  hl_hedge.py  hl_stats.py  hl_stats_block.py  (+11 more)
tests/: conftest.py  test_analysis.py  test_book_depth.py  test_cli.py  test_cross_venue.py  test_dashboard.py  test_db.py  test_detector.py  test_fetch.py  test_historical.py  test_hl_backtest.py  test_hl_basis_hedge.py  test_hl_extremes.py  test_hl_hedge.py  test_hl_stats.py  test_hl_stats_block.py  test_hl_strategies.py  test_hl_tail.py  test_hyperliquid.py  test_microstructure.py  test_monitor.py  test_paper.py  test_plots.py  test_polymarket_mm_sim.py  test_properties.py  test_report.py  test_trap_classifier.py  test_walkforward.py
