[project]
name = "polymarket-edge"
version = "0.1.0"
description = "Event-level no-arb scanner for Polymarket mutually-exclusive (negRisk) markets"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28",
    "matplotlib>=3.8",
    "typer>=0.15",
]

[project.scripts]
polymarket-edge = "polymarket_edge.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/polymarket_edge"]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "pytest>=8.3",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF", "SIM"]
